Use jaeger 2.14.1 and ShardingSphere 5.5.3-SNAPSHOT 1fd3fd21bb8715edc6ea7f467d32a40022ec5d82